allow installing packages for multiple workspaces

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotnetcore"
   ],
   "activationEvents": [
-    "workspaceContains:*.csproj"
+    "workspaceContains:**/*.csproj"
   ],
   "main": "./out/extension.js",
   "contributes": {
