--- a/package.json
+++ b/package.json
@@ -56,6 +56,14 @@
         }
       },
       {
+        "command": "nuget-explorer.check-for-updates",
+        "title": "NuGet: Check for updates",
+        "icon": {
+          "light": "resources/light/update.svg",
+          "dark": "resources/dark/update.svg"
+        }
+      },
+      {
         "command": "nuget-explorer.install",
         "title": "NuGet: Install Package",
         "icon": {
@@ -79,9 +87,18 @@
           "command": "nuget-explorer.install",
           "when": "view == nuget-installed",
           "group": "navigation"
+        },
+        {
+          "command": "nuget-explorer.check-for-updates",
+          "when": "view == nuget-installed",
+          "group": "navigation"
         }
       ],
       "view/item/context": [
+        {
+          "command": "nuget-explorer.install",
+          "when": "view == nuget-installed && viewItem == workspace"
+        },
         {
           "command": "nuget-explorer.uninstall",
           "when": "view == nuget-installed && viewItem == package"
