--- a/package.json
+++ b/package.json
@@ -108,26 +108,29 @@
           "when": "view == nuget-installed && viewItem == package"
         },
         {
-            "command": "nuget-explorer.check-for-updates",
-            "when": "view == nuget-installed && viewItem == package"
+          "command": "nuget-explorer.check-for-updates",
+          "when": "view == nuget-installed && viewItem == package"
         }
       ]
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "webpack --mode production",
+    "compile": "webpack --mode none",
+    "watch": "webpack --mode none --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test-compile": "tsc -p ./"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^10.12.21",
     "@types/xml2js": "^0.4.4",
+    "ts-loader": "^5.4.5",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1",
-    "vscode": "^1.1.28"
+    "vscode": "^1.1.28",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
