--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "compile": "webpack --mode none",
     "watch": "webpack --mode none --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test-compile": "tsc -p ./"
+    "test-compile": "tsc -p ./",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
@@ -54,6 +55,7 @@
     "ts-loader": "^5.4.5",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1",
+    "vsce": "^1.69.0",
     "vscode": "^1.1.28",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
@@ -81,9 +83,9 @@
           "when": "inDotnetProject"
         },
         {
-            "id": "nuget-updates",
-            "name": "Packages With Updates",
-            "when": "inDotnetProject"
+          "id": "nuget-updates",
+          "name": "Packages With Updates",
+          "when": "inDotnetProject"
         }
       ]
     },
@@ -165,9 +167,9 @@
           "when": "view == nuget-installed && viewItem == package"
         },
         {
-            "command": "nuget-explorer.update",
-            "when": "view == nuget-updates && viewItem == package",
-            "group": "inline"
+          "command": "nuget-explorer.update",
+          "when": "view == nuget-updates && viewItem == package",
+          "group": "inline"
         }
       ]
     }
