--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Joel Crosby <joelcrosby@live.co.uk>",
   "icon": "resources/icon.png",
   "engines": {
-    "vscode": "^1.33.0"
+    "vscode": "^1.61.2"
   },
   "repository": {
     "type": "git",
@@ -43,26 +43,32 @@
     "webpack-dev": "webpack --mode development --watch",
     "compile": "webpack --mode none",
     "watch": "webpack --mode none --watch",
-    "postinstall": "node ./node_modules/vscode/bin/install",
     "test-compile": "tsc -p ./",
     "package": "vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
-    "@types/node": "^10.12.21",
+    "@types/node": "^14.0.0",
+    "@types/vscode": "^1.61.0",
     "@types/xml2js": "^0.4.4",
-    "copy-webpack-plugin": "^5.0.3",
-    "ts-loader": "^5.4.5",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.1",
-    "vsce": "^1.69.0",
-    "vscode": "^1.1.28",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1"
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsdoc": "^37.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "vsce": "^1.100.2",
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "xml2js": "^0.4.19"
+    "axios": "^0.24.0",
+    "xml2js": "^0.4.23"
   },
   "contributes": {
     "viewsContainers": {
