--- a/.prettierrc
+++ b/.prettierrc
@@ -8,19 +8,5 @@
   "useTabs": false,
   "endOfLine": "lf",
   "arrowParens": "always",
-  "bracketSpacing": true,
-  "overrides": [
-    {
-      "files": "*.component.html",
-      "options": {
-        "parser": "angular"
-      }
-    },
-    {
-      "files": "*.html",
-      "options": {
-        "parser": "html"
-      }
-    }
-  ]
+  "bracketSpacing": true
 }
