--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "prettier": "^2.4.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "vsce": "^1.100.2",
